objects/ProfileSearch__c.object
<CustomObject>
    <fields>
        <fullName>Email_Template_1__c</fullName>
        <label>Email Template 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_2__c</fullName>
        <label>Email Template 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_3__c</fullName>
        <label>Email Template 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OptOutFromEmails__c</fullName>
        <label>OptOutFromEmails</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ParticipantPublicPageURL__c</fullName>
        <label>ParticipantPublicPageURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SOQL_LIMIT__c</fullName>
        <label>SOQL LIMIT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>